@@ -49,18 +49,19 @@ dependencies {
     compile "org.springframework.boot:spring-boot-devtools"
     compile "org.springframework.boot:spring-boot-starter-freemarker"
     compile "org.springframework.boot:spring-boot-starter-data-jpa"
+    compile "org.springframework.boot:spring-boot-starter-redis"
+    compile "redis.clients:jedis:2.7.3"
     compile "org.webjars:bootstrap:3.3.6"
     compile "org.webjars:font-awesome:4.6.3"
     compile "org.webjars:jquery:2.2.4"
-    compile 'org.webjars:coffee-script:1.10.0'
-    compile 'org.webjars:lodash:4.0.0'
-    compile 'org.webjars:highcharts:4.2.5'
-    compile 'org.webjars:react:15.2.1'
-    compile 'org.webjars.npm:babel-core:5.8.19'
+    compile "org.webjars:coffee-script:1.10.0"
+    compile "org.webjars:lodash:4.0.0"
+    compile "org.webjars:highcharts:4.2.5"
+    compile "org.webjars:react:15.2.1"
+    compile "org.webjars.npm:babel-core:5.8.19"
     compile group: 'com.google.guava', name: 'guava', version: '19.0'
     compile group: 'org.apache.commons', name: 'commons-lang3', version: '3.0'
     compile group: 'mysql', name: 'mysql-connector-java'
-//    runtime 'mysql:mysql-connector-java'
     testCompile "org.springframework.boot:spring-boot-starter-test"
 }
 
