@@ -1,12 +1,11 @@
 package cn.nonocast.security;
 
+import cn.nonocast.model.User;
+import cn.nonocast.repository.UserRepository;
 import org.springframework.beans.factory.annotation.Autowired;
-import org.springframework.context.annotation.Bean;
 import org.springframework.security.core.userdetails.UserDetails;
 import org.springframework.security.core.userdetails.UserDetailsService;
 import org.springframework.security.core.userdetails.UsernameNotFoundException;
-import cn.nonocast.repository.UserRepository;
-import cn.nonocast.model.User;
 import org.springframework.stereotype.Service;
 
 @Service
