@@ -2,3 +2,6 @@ project.version=0.2.20-SNAPSHOT
 spring.profiles.active=dev
 spring.jackson.mapper.sort_properties_alphabetically=false
 wechat.path=/etc/todolist
+
+spring.cache.type=redis
+spring.redis.host=localhost
